@@ -47,6 +47,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #20098: New mangle_from_ policy option for email, default True
+  for compat32, but False for all other policies.
+
 - Issue #24211: The email library now supports RFC 6532: it can generate
   headers using utf-8 instead of encoded words.
 
